fix text overlap and got rid of js folder

--- a/public/styles.css
+++ b/public/styles.css
@@ -38,6 +38,7 @@ input {
 
 #results-container {
     padding: 5%;
+    line-height: 50px;
 }
 
 .footer {
